--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <div class="left">
-            <img src="./images/starguardianwallpaper.jpg" alt="Background Image">
+            <video autoplay loop muted>
+                <source src="./images/starguardianlivewallpaper.mp4" type="video/mp4">
+            </video>
             <div class="dark-overlay">
                 <img src="./images/SG-logo-1.png" alt="logo">
             </div>
