added bottom section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                     </form>
                 </div>
             </div>
+            <div class="bottom">
+                <p>Already have an account?</p> <a href="https://placeholder.com">Log in</a>
+            </div>
         </div>
     </body>
 </html>
