--- a/index.html
+++ b/index.html
@@ -28,22 +28,20 @@
             <div class="signUp">
                 <p>Let's do this, Star Guardian!</p>
                 <div class="formContainer">
-                    <form id="userLeftForm">
-                        <label for="first_name">First Name</label><br>
+                    <form id="userForm">
+                        <label for="first_name">First Name</label>
+                        <label for="last_name">Last Name</label>
                         <input type="text" id="first_name" required>
-                        <label for="email">Email</label><br>
+                        <input type="text" id="last_name" required>
+                        <label for="email">Email</label>
+                        <label for="phone">Phone Number</label>
                         <input type="email" id="email" required>
-                        <label for="password">Password</label><br>
-                        <input type="password" id="password" required>
-                        <button type="submit">Confirm</button>
-                    </form>
-                    <form id="userRightForm">
-                        <label for="last_name">Last Name</label><br>
-                        <input type="text" id="first_name" required>
-                        <label for="phone">Phone Number</label><br>
                         <input type="tel" id="phone" required>
-                        <label for="password">Confirm Password</label><br>
+                        <label for="password">Password</label>
+                        <label for="password">Confirm Password</label>
+                        <input type="password" id="password" required>
                         <input type="password" id="confirm_password" required>
+                        <button type="submit">Confirm</button>
                     </form>
                 </div>
             </div>
